2023-11-04         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Fix the spelling of "Ukrainian". Thanks to
	Bruce Horrocks.

2023-11-02         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.3.0: Release tar ball made.

2023-10-31         Corinna Vinschen      <vinschen@redhat.com>

	* awk.h (wcitomb): Add declaration.
	* node.c (parse_escape): Use it on Cygwin.

2023-10-24         Arnold D. Robbins     <arnold@skeeve.com>

	* eval.c (setup_frame): Fix a potential use after free
	error. Thanks to Michal Jaegermann for the report.

2023-10-23         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_sub): Fix a use-after-free issue reported
	by Miguel Pineiro Jr. <mpj@pineiro.cc>.

2023-10-22         Arnold D. Robbins     <arnold@skeeve.com>

	* nonposix.h, re.c: Update coyright year.

2023-10-21         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (parse_args): Deal better with things if -p
	given twice. Thanks to Hermann Peifer for the report.
	* Checklist: Revised a bit.
	* awkgram.y (isnoeffect): Add Op_exec_count to the list so
	that `gawk --lint --profile BEGIN{0}' also produces a lint
	warning. Thanks yet again to Hermann Peifer.

2023-10-19         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Updated.
	* README: Version bumped to 5.3.0. Updated info about makeinfo
	and texinfo.tex versions.

2023-10-17         Arnold D. Robbins     <arnold@skeeve.com>

	* re.c (make_regexp): Fix setting ok_to_escape.

2023-10-15         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Editing, in preparation for release.

2023-10-12         Eli Zaretskii  <eliz@gnu.org>

	* node.c (parse_escape) [__MINGW32__]: Use w32_wc_to_lc to convert
	Unicode codepoints.

	* nonposix.h (w32_wc_to_lc) [__MINGW32__]: Add prototype.

2023-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* node.c (parse_escape): Fix warning message for \u escape.
	* interpret.h (Op_lint_plus): Improve the test, especially