@@ -1187,6 +1187,8 @@ EXTRA_DIST = \
 	revout.ok \
 	revtwoway.awk \
 	revtwoway.ok \
+	re_test.awk \
+	re_test.ok \
 	rri1.awk \
 	rri1.in \
 	rri1.ok \
@@ -1567,7 +1569,8 @@ GAWK_EXT_TESTS = \
 	symtab3 symtab4 symtab5 symtab6 symtab7 symtab8 symtab9 symtab10 \
 	symtab11 symtab12 timeout typedregex1 typedregex2 typedregex3 \
 	typedregex4 typedregex5 typedregex6 typeof1 typeof2 typeof3 \
-	typeof4 typeof5 typeof6 unicode1 watchpoint1
+	typeof4 typeof5 typeof6 unicode1 watchpoint1 \
+	re_test
 
 ARRAYDEBUG_TESTS = arrdbg
 
