@@ -1,0 +1,21 @@
+* set: x = @/bar/
+* set: y = @/bar/
+@/bar/ == @/bar/ --> 1
+@/bar/ ~  @/bar/ --> 1
+@/bar/ <= @/bar/ --> 1
+@/bar/ <  @/bar/ --> 0
+* set: y = @/baz/
+@/bar/ == @/baz/ --> 0
+@/bar/ ~  @/baz/ --> 0
+@/bar/ <= @/baz/ --> 1
+@/bar/ <  @/baz/ --> 1
+* set: y = bar
+@/bar/ == bar --> 1
+@/bar/ ~  bar --> 1
+@/bar/ <= bar --> 1
+@/bar/ <  bar --> 0
+* set: y = baz
+@/bar/ == baz --> 0
+@/bar/ ~  baz --> 0
+@/bar/ <= baz --> 1
+@/bar/ <  baz --> 1
