@@ -1,3 +1,8 @@
+2023-11-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test, re_test.
+	* re_test.awk, re_test.in, re_test.ok: New files.
+
 2023-11-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 5.3.0: Release tar ball made.
