@@ -1,3 +1,9 @@
+2023-11-16         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* eval.c (cmp_scalars): Check for REGEX as well as STRING
+	in order to do a string compare. Thanks to
+	"*" <cl2ap0101@gmail.com> for the report.
+
 2023-11-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* NEWS: Fix the spelling of "Ukrainian". Thanks to
